--- a/app/src/main/res/layout/fragment_enroll.xml
+++ b/app/src/main/res/layout/fragment_enroll.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".EnrollFragment">
 
+    <!--  最下行から4行目までは、編集不可モード仕様  -->
     <EditText
         android:id="@+id/dateEdit"
         android:layout_width="wrap_content"
@@ -17,8 +18,13 @@
         android:hint="予約日付"
         android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
+    <!--  最下行から4行目までは、編集不可モード仕様  -->
     <EditText
         android:id="@+id/timeEdit"
         android:layout_width="wrap_content"
@@ -29,8 +35,13 @@
         android:hint="予約時間"
         android:inputType="time"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/dateEdit"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
+    <!--  最下行から4行目までは、編集不可モード仕様  -->
     <EditText
         android:id="@+id/PersonNameEdit"
         android:layout_width="0dp"
@@ -43,8 +54,13 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/timeEdit"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
+    <!--  最下行から4行目までは、編集不可モード仕様  -->
     <EditText
         android:id="@+id/detailEdit"
         android:layout_width="0dp"
@@ -60,51 +76,10 @@
         android:minLines="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PersonNameEdit" />
+        app:layout_constraintTop_toBottomOf="@+id/PersonNameEdit"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
-    <Button
-        android:id="@+id/dateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="予約日付選択"
-        app:layout_constraintBottom_toBottomOf="@+id/dateEdit"
-        app:layout_constraintStart_toEndOf="@+id/dateEdit"
-        app:layout_constraintTop_toTopOf="@+id/dateEdit" />
-
-    <Button
-        android:id="@+id/timeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="予約時間選択"
-        app:layout_constraintBottom_toBottomOf="@+id/timeEdit"
-        app:layout_constraintStart_toEndOf="@+id/timeEdit"
-        app:layout_constraintTop_toTopOf="@+id/timeEdit"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="209dp"
-        android:layout_marginBottom="28dp"
-        android:text="保存"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="121dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="削除"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/save" />
 </androidx.constraintlayout.widget.ConstraintLayout>
