--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/action_nav_resgoods"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/shopsFragment">
 
     <fragment
@@ -13,9 +13,6 @@
         <action
             android:id="@+id/action_nav_goods"
             app:destination="@id/goodsFragment" />
-        <action
-            android:id="@+id/action_nav_resgoods"
-            app:destination="@id/resGoodsFragment" />
     </fragment>
     <fragment
         android:id="@+id/goodsFragment"
@@ -65,15 +62,6 @@
             android:defaultValue="@null" />
     </fragment>
     <fragment
-        android:id="@+id/resGoodsFragment"
-        android:name="com.example.myscheduler.resGoodsFragment"
-        android:label="fragment_res_goods"
-        tools:layout="@layout/fragment_res_goods" >
-        <action
-            android:id="@+id/action_to_enroll"
-            app:destination="@id/enrollCompFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/enrollAuthFragment"
         android:name="com.example.myscheduler.EnrollAuthFragment"
         android:label="fragment_enroll_auth"
@@ -81,7 +69,7 @@
         <argument
             android:name="goodId"
             app:argType="org.bson.types.ObjectId"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            android:defaultValue="@null"
+            app:nullable="true" />
     </fragment>
 </navigation>
